include/prism.h

typedef struct PrismBackend PrismBackend;
typedef uint64_t PrismBackendId;
typedef struct PrismRegistry PrismRegistry;
typedef struct PrismRegistryBuilder PrismRegistryBuilder;
typedef enum PrismError {
  PRISM_OK = 0,
  PRISM_ERROR_NOT_INITIALIZED,
  PRISM_ERROR_INVALID_PARAM,
  PRISM_ERROR_NOT_IMPLEMENTED,
  PRISM_ERROR_NO_VOICES,
  PRISM_ERROR_VOICE_NOT_FOUND,
  PRISM_ERROR_SPEAK_FAILURE,
  PRISM_ERROR_MEMORY_FAILURE,
  PRISM_ERROR_RANGE_OUT_OF_BOUNDS,
  PRISM_ERROR_INTERNAL,
  PRISM_ERROR_NOT_SPEAKING,
  PRISM_ERROR_NOT_PAUSED,
  PRISM_ERROR_ALREADY_PAUSED,
  PRISM_ERROR_INVALID_UTF8,
  PRISM_ERROR_INVALID_OPERATION,
  PRISM_ERROR_ALREADY_INITIALIZED,
  PRISM_ERROR_BACKEND_NOT_AVAILABLE,
  PRISM_ERROR_UNKNOWN,
  PRISM_ERROR_INVALID_AUDIO_FORMAT,
  PRISM_ERROR_INTERNAL_BACKEND_LIMIT_EXCEEDED,
  PRISM_ERROR_BACKEND_ENTERED_UNDEFINED_STATE,
  PRISM_ERROR_LIBRARY_LOAD_FAILED,
  PRISM_ERROR_LIBRARY_INVALID,
  PRISM_ERROR_INCOMPATIBLE_ABI,
  PRISM_ERROR_COUNT
} PrismError;
typedef void(PRISM_CALL *PrismAudioCallback)(
    void *userdata, const float *PRISM_RESTRICT samples, size_t sample_count,
    size_t channels, size_t sample_rate);
typedef struct PrismBackendVTable {
  size_t size;
  void *(PRISM_CALL *create)(void *userdata);
  void(PRISM_CALL *destroy)(void *instance);
  bool(PRISM_CALL *is_supported)(void *instance);
  PrismError(PRISM_CALL *initialize)(void *instance);
  PrismError(PRISM_CALL *speak)(void *instance, const char *text,
                                bool interrupt);
  PrismError(PRISM_CALL *speak_to_memory)(void *instance, const char *text,
                                          PrismAudioCallback callback,
                                          void *callback_userdata);
  PrismError(PRISM_CALL *braille)(void *instance, const char *text);
  PrismError(PRISM_CALL *output)(void *instance, const char *text,
                                 bool interrupt);
  PrismError(PRISM_CALL *stop)(void *instance);
  PrismError(PRISM_CALL *pause)(void *instance);
  PrismError(PRISM_CALL *resume)(void *instance);
  PrismError(PRISM_CALL *is_speaking)(void *instance, bool *out_speaking);
  PrismError(PRISM_CALL *set_volume)(void *instance, float volume);
  PrismError(PRISM_CALL *get_volume)(void *instance, float *out_volume);
  PrismError(PRISM_CALL *set_rate)(void *instance, float rate);
  PrismError(PRISM_CALL *get_rate)(void *instance, float *out_rate);
  PrismError(PRISM_CALL *set_pitch)(void *instance, float pitch);
  PrismError(PRISM_CALL *get_pitch)(void *instance, float *out_pitch);
  PrismError(PRISM_CALL *refresh_voices)(void *instance);
  PrismError(PRISM_CALL *count_voices)(void *instance, size_t *out_count);
  PrismError(PRISM_CALL *get_voice_name)(void *instance, size_t voice_id,
                                         const char **out_name);
  PrismError(PRISM_CALL *get_voice_language)(void *instance, size_t voice_id,
                                             const char **out_language);
  PrismError(PRISM_CALL *set_voice)(void *instance, size_t voice_id);
  PrismError(PRISM_CALL *get_voice)(void *instance, size_t *out_voice_id);
  PrismError(PRISM_CALL *get_channels)(void *instance, size_t *out_channels);
  PrismError(PRISM_CALL *get_sample_rate)(void *instance,
                                          size_t *out_sample_rate);
  PrismError(PRISM_CALL *get_bit_depth)(void *instance, size_t *out_bit_depth);
} PrismBackendVTable;
typedef enum PrismLogLevel {
  PRISM_LOG_LEVEL_TRACE,
  PRISM_LOG_LEVEL_DEBUG,
  PRISM_LOG_LEVEL_INFO,
  PRISM_LOG_LEVEL_WARN,
  PRISM_LOG_LEVEL_ERROR,
  PRISM_LOG_LEVEL_NONE
} PrismLogLevel;
typedef void(PRISM_CALL *PrismLogCallback)(void *userdata, PrismLogLevel level,
                                           const char *source,
                                           const char *message);
typedef struct PrismLogHandler {
  PrismLogCallback fn;
  void *userdata;
} PrismLogHandler;
PRISM_API
void PRISM_CALL prism_backend_free(PrismBackend *backend);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) const char *PRISM_CALL
    prism_backend_name(PrismBackend *backend);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) uint64_t PRISM_CALL
    prism_backend_get_features(PrismBackend *backend);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) PrismError PRISM_CALL
    prism_backend_initialize(PrismBackend *backend);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2)
    PRISM_NULL_TERMINATED_STRING_ARG(2) PrismError PRISM_CALL
    prism_backend_speak(PrismBackend *backend, const char *PRISM_RESTRICT text,
                        bool interrupt);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2, 3)
    PRISM_NULL_TERMINATED_STRING_ARG(2) PrismError PRISM_CALL
    prism_backend_speak_to_memory(PrismBackend *backend,
                                  const char *PRISM_RESTRICT text,
                                  PrismAudioCallback callback, void *userdata);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2)
    PRISM_NULL_TERMINATED_STRING_ARG(2) PrismError PRISM_CALL
    prism_backend_braille(PrismBackend *backend,
                          const char *PRISM_RESTRICT text);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2)
    PRISM_NULL_TERMINATED_STRING_ARG(2) PrismError PRISM_CALL
    prism_backend_output(PrismBackend *backend, const char *PRISM_RESTRICT text,
                         bool interrupt);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) PrismError PRISM_CALL
    prism_backend_stop(PrismBackend *backend);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) PrismError PRISM_CALL
    prism_backend_pause(PrismBackend *backend);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) PrismError PRISM_CALL
    prism_backend_resume(PrismBackend *backend);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2) PrismError PRISM_CALL
    prism_backend_is_speaking(PrismBackend *backend,
                              bool *PRISM_RESTRICT out_speaking);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) PrismError PRISM_CALL
    prism_backend_set_volume(PrismBackend *backend, float volume);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) PrismError PRISM_CALL
    prism_backend_set_rate(PrismBackend *backend, float rate);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) PrismError PRISM_CALL
    prism_backend_set_pitch(PrismBackend *backend, float pitch);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2) PrismError PRISM_CALL
    prism_backend_get_volume(PrismBackend *backend,
                             float *PRISM_RESTRICT out_volume);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2) PrismError PRISM_CALL
    prism_backend_get_rate(PrismBackend *backend,
                           float *PRISM_RESTRICT out_rate);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2) PrismError PRISM_CALL
    prism_backend_get_pitch(PrismBackend *backend,
                            float *PRISM_RESTRICT out_pitch);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) PrismError PRISM_CALL
    prism_backend_refresh_voices(PrismBackend *backend);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2) PrismError PRISM_CALL
    prism_backend_count_voices(PrismBackend *backend,
                               size_t *PRISM_RESTRICT out_count);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 3) PrismError PRISM_CALL
    prism_backend_get_voice_name(PrismBackend *backend, size_t voice_id,
                                 const char **PRISM_RESTRICT out_name);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 3) PrismError PRISM_CALL
    prism_backend_get_voice_language(PrismBackend *backend, size_t voice_id,
                                     const char **PRISM_RESTRICT out_language);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1) PrismError PRISM_CALL
    prism_backend_set_voice(PrismBackend *backend, size_t voice_id);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2) PrismError PRISM_CALL
    prism_backend_get_voice(PrismBackend *backend,
                            size_t *PRISM_RESTRICT out_voice_id);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2) PrismError PRISM_CALL
    prism_backend_get_channels(PrismBackend *backend,
                               size_t *PRISM_RESTRICT out_channels);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2) PrismError PRISM_CALL
    prism_backend_get_sample_rate(PrismBackend *backend,
                                  size_t *PRISM_RESTRICT out_sample_rate);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2) PrismError PRISM_CALL
    prism_backend_get_bit_depth(PrismBackend *backend,
                                size_t *PRISM_RESTRICT out_bit_depth);
PRISM_API PRISM_NODISCARD const char *PRISM_CALL
prism_error_string(PrismError error);
PRISM_API PRISM_NODISCARD PRISM_MALLOC PrismRegistryBuilder *PRISM_CALL
prism_registry_builder_new(void);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2, 5)
    PRISM_NULL_TERMINATED_STRING_ARG(2) PrismError PRISM_CALL
    prism_registry_builder_add_backend(
        PrismRegistryBuilder *builder, const char *name, int priority,
        uint64_t features, const PrismBackendVTable *vtable, void *userdata,
        void(PRISM_CALL *userdata_free)(void *), PrismBackendId *out_id);
PRISM_API PRISM_NODISCARD PRISM_NONNULL(1, 2)
    PRISM_NULL_TERMINATED_STRING_ARG(2) PrismError PRISM_CALL
    prism_registry_builder_add_library(PrismRegistryBuilder *builder,
                                       const char *PRISM_RESTRICT path,
                                       int priority_override,
                                       size_t *PRISM_RESTRICT out_count);
PRISM_API
PRISM_NODISCARD PRISM_MALLOC PRISM_NONNULL(1) PrismRegistry *PRISM_CALL
    prism_registry_freeze(PrismRegistryBuilder *builder);
PRISM_API void PRISM_CALL
prism_registry_builder_free(PrismRegistryBuilder *builder);
PRISM_API PrismRegistry *PRISM_CALL
prism_registry_retain(PrismRegistry *registry);
PRISM_API void PRISM_CALL prism_registry_release(PrismRegistry *registry);
PRISM_API PrismLogHandler PRISM_CALL
prism_set_log_handler(PrismLogHandler handler);
PRISM_API PrismLogLevel PRISM_CALL prism_set_log_level(PrismLogLevel level);
PRISM_API void PRISM_CALL prism_log_flush(void);
PRISM_API void PRISM_CALL prism_log_shutdown(void);
PRISM_API PRISM_NODISCARD uint32_t PRISM_CALL prism_version(void);
PRISM_API PRISM_NODISCARD const char *PRISM_CALL prism_version_string(void);