bindings/rust/prismatoid-sys/src/lib.rs


    pub fn prism_backend_free(backend: *mut PrismBackend);
    pub fn prism_backend_name(backend: *mut PrismBackend) -> *const c_char;
    pub fn prism_backend_get_features(backend: *mut PrismBackend) -> u64;
    pub fn prism_backend_initialize(backend: *mut PrismBackend) -> PrismError;
    pub fn prism_backend_speak(
        backend: *mut PrismBackend,
        text: *const c_char,
        interrupt: bool,
    ) -> PrismError;
    pub fn prism_backend_speak_to_memory(
        backend: *mut PrismBackend,
        text: *const c_char,
        callback: Option<PrismAudioCallback>,
        userdata: *mut c_void,
    ) -> PrismError;
    pub fn prism_backend_braille(backend: *mut PrismBackend, text: *const c_char) -> PrismError;
    pub fn prism_backend_output(
        backend: *mut PrismBackend,
        text: *const c_char,
        interrupt: bool,
    ) -> PrismError;
    pub fn prism_backend_stop(backend: *mut PrismBackend) -> PrismError;
    pub fn prism_backend_pause(backend: *mut PrismBackend) -> PrismError;
    pub fn prism_backend_resume(backend: *mut PrismBackend) -> PrismError;
    pub fn prism_backend_is_speaking(
        backend: *mut PrismBackend,
        out_speaking: *mut bool,
    ) -> PrismError;
    pub fn prism_backend_set_volume(backend: *mut PrismBackend, volume: f32) -> PrismError;
    pub fn prism_backend_get_volume(backend: *mut PrismBackend, out_volume: *mut f32)
        -> PrismError;
    pub fn prism_backend_set_rate(backend: *mut PrismBackend, rate: f32) -> PrismError;
    pub fn prism_backend_get_rate(backend: *mut PrismBackend, out_rate: *mut f32) -> PrismError;
    pub fn prism_backend_set_pitch(backend: *mut PrismBackend, pitch: f32) -> PrismError;
    pub fn prism_backend_get_pitch(backend: *mut PrismBackend, out_pitch: *mut f32) -> PrismError;
    pub fn prism_backend_refresh_voices(backend: *mut PrismBackend) -> PrismError;
    pub fn prism_backend_count_voices(
        backend: *mut PrismBackend,
        out_count: *mut usize,
    ) -> PrismError;
    pub fn prism_backend_get_voice_name(
        backend: *mut PrismBackend,
        voice_id: usize,
        out_name: *mut *const c_char,
    ) -> PrismError;
    pub fn prism_backend_get_voice_language(
        backend: *mut PrismBackend,
        voice_id: usize,
        out_language: *mut *const c_char,
    ) -> PrismError;
    pub fn prism_backend_set_voice(backend: *mut PrismBackend, voice_id: usize) -> PrismError;
    pub fn prism_backend_get_voice(
        backend: *mut PrismBackend,
        out_voice_id: *mut usize,
    ) -> PrismError;
    pub fn prism_backend_get_channels(
        backend: *mut PrismBackend,
        out_channels: *mut usize,
    ) -> PrismError;
    pub fn prism_backend_get_sample_rate(
        backend: *mut PrismBackend,
        out_sample_rate: *mut usize,
    ) -> PrismError;
    pub fn prism_backend_get_bit_depth(
        backend: *mut PrismBackend,
        out_bit_depth: *mut usize,
    ) -> PrismError;
    pub fn prism_error_string(error: PrismError) -> *const c_char;

    pub fn prism_registry_builder_new() -> *mut PrismRegistryBuilder;
    pub fn prism_registry_builder_add_backend(
        builder: *mut PrismRegistryBuilder,
        name: *const c_char,
        priority: i32,
        features: u64,
        vtable: *const PrismBackendVTable,
        userdata: *mut c_void,
        userdata_free: Option<unsafe extern "C" fn(userdata: *mut c_void)>,
        out_id: *mut PrismBackendId,
    ) -> PrismError;
    pub fn prism_registry_builder_add_library(
        builder: *mut PrismRegistryBuilder,
        path: *const c_char,
        priority_override: i32,
        out_count: *mut usize,
    ) -> PrismError;
    pub fn prism_registry_freeze(builder: *mut PrismRegistryBuilder) -> *mut PrismRegistry;
    pub fn prism_registry_builder_free(builder: *mut PrismRegistryBuilder);
    pub fn prism_registry_retain(registry: *mut PrismRegistry) -> *mut PrismRegistry;
    pub fn prism_registry_release(registry: *mut PrismRegistry);

    pub fn prism_set_log_handler(handler: PrismLogHandler) -> PrismLogHandler;
    pub fn prism_set_log_level(level: PrismLogLevel) -> PrismLogLevel;
    pub fn prism_log(level: PrismLogLevel, source: *const c_char, message: *const c_char);
    pub fn prism_log_flush();
    pub fn prism_log_shutdown();
    pub fn prism_version() -> u32;
    pub fn prism_version_string() -> *const c_char;
}

#[cfg(feature = "mock")]
pub mod mock;
#[cfg(feature = "mock")]
pub use mock::mock_trigger_availability;
